# project_in_iis

./: .gitignore  README.md  agent.py  agent_tools.py  auth.py  aux.py  aux_tools.py  base_flow.py  cleaned_list.json  custom_classes.py  frontend.py  opps.txt  profile_update_aux.py  profiles.txt  pyproject.toml  requirements.txt  scoring.py
sql_scripts/: opportunities.sql  volunteer_profiles.sql
